main/default/objects/Renewal__c/Renewal__c.object-meta.xml
<CustomObject>
    <label>Renewal</label>
    <nameField>
        <displayFormat>REN-{00000}</displayFormat>
        <label>Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>