main/default/objects/Renewal__c/fields/AQUW153_Template__c.field-meta.xml
<CustomField>
    <fullName>AQUW153_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AQUW153_Template</label>
    <type>Checkbox</type>
</CustomField>