main/default/objects/Renewal__c/fields/Assigned_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Underwriter</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>AQ Auto Renewals checkbox needs to be true on the user.</errorMessage>
        <filterItems>
            <field>User.Is_AQ_Auto_Renewals_Underwriter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewals1</relationshipName>
    <type>Lookup</type>
</CustomField>