main/default/objects/Renewal__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Broker_Account__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>