main/default/objects/Renewal__c/fields/Broker_Appointed__c.field-meta.xml
<CustomField>
    <fullName>Broker_Appointed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Appointed?</label>
    <type>Checkbox</type>
</CustomField>