main/default/objects/Renewal__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Broker__r.Broker_Contact__r.Account.Id  , Broker__r.Broker_Contact__r.Account.Name)</formula>
    <label>Broker</label>
    <type>Text</type>
</CustomField>