main/default/objects/Renewal__c/fields/Broker_Warning__c.field-meta.xml
<CustomField>
    <fullName>Broker_Warning__c</fullName>
    <label>Broker Warning</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>