main/default/objects/Renewal__c/fields/Claims_Number__c.field-meta.xml
<CustomField>
    <fullName>Claims_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Claims #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>