main/default/objects/Renewal__c/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <label>Documents Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountants Proposal Form</fullName>
            </value>
            <value>
                <fullName>Accountants Renewal Declaration Form</fullName>
            </value>
            <value>
                <fullName>Accountants Tax Scheme Questionnaire</fullName>
            </value>
            <value>
                <fullName>A copy of the underlying insurers renewal terms and the primary policy renewal proposal/submission</fullName>
            </value>
            <value>
                <fullName>Architects &amp; Engineers Proposal Form</fullName>
            </value>
            <value>
                <fullName>Construction Cladding Questionnaire</fullName>
            </value>
            <value>
                <fullName>Construction Professionals Renewal Declaration Form</fullName>
            </value>
            <value>
                <fullName>Construction Risk Management Questionnaire</fullName>
            </value>
            <value>
                <fullName>Design &amp; Construction Proposal Form</fullName>
            </value>
            <value>
                <fullName>Insurance Brokers Proposal Form</fullName>
            </value>
            <value>
                <fullName>IT Professionals Proposal Form</fullName>
            </value>
            <value>
                <fullName>Media, Marketing &amp; Communications Professions Proposal Form</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Proposal Form</fullName>
            </value>
            <value>
                <fullName>No Claims Declaration</fullName>
            </value>
            <value>
                <fullName>Property Professionals Proposal Form</fullName>
            </value>
            <value>
                <fullName>Property Professionals Renewal Declaration Form</fullName>
            </value>
            <value>
                <fullName>Property Professionals Surveying &amp; Valuing Questionnaire</fullName>
            </value>
            <value>
                <fullName>Renewal Declaration Form</fullName>
            </value>
            <value>
                <fullName>Risk Management Questionnaire</fullName>
            </value>
            <value>
                <fullName>Short Proposal Form</fullName>
            </value>
            <value>
                <fullName>Accountants Proposal Form &amp; a Tax Scheme Questionnaire</fullName>
                <isActive>false</isActive>
                <label>Accountants Proposal Form &amp; a Tax Scheme Questionnaire</label>
            </value>
            <value>
                <fullName>Architects &amp; Engineers Proposal Form &amp; a Cladding Questionnaire</fullName>
                <isActive>false</isActive>
                <label>Architects &amp; Engineers Proposal Form &amp; a Cladding Questionnaire</label>
            </value>
            <value>
                <fullName>Design &amp; Construction Proposal Form &amp; a Cladding Questionnaire</fullName>
                <isActive>false</isActive>
                <label>Design &amp; Construction Proposal Form &amp; a Cladding Questionnaire</label>
            </value>
            <value>
                <fullName>Property Professionals Proposal Form &amp; Surveying &amp; Valuing Questionnaire</fullName>
                <isActive>false</isActive>
                <label>Property Professionals Proposal Form &amp; Surveying &amp; Valuing Questionnaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>