main/default/objects/Renewal__c/fields/Email_Sent_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Type__c</fullName>
    <label>Email Sent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No email sent</fullName>
                <default>true</default>
                <label>No email sent</label>
            </value>
            <value>
                <fullName>90 days notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>