main/default/objects/Renewal__c/fields/Insured_Account__c.field-meta.xml
<CustomField>
    <fullName>Insured_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match the lookup filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>