main/default/objects/Renewal__c/fields/Latest_Bound_Quote__c.field-meta.xml
<CustomField>
    <fullName>Latest_Bound_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Bound Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>