main/default/objects/Renewal__c/fields/Main_Profession__c.field-meta.xml
<CustomField>
    <fullName>Main_Profession__c</fullName>
    <formula>TEXT(Latest_Bound_Quote__r.Opportunity.Main_Profession__c)</formula>
    <label>Main Profession</label>
    <type>Text</type>
</CustomField>