main/default/objects/Renewal__c/fields/No_Recepients__c.field-meta.xml
<CustomField>
    <fullName>No_Recepients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Recepients</label>
    <type>Checkbox</type>
</CustomField>