main/default/objects/Renewal__c/fields/No_Recipients__c.field-meta.xml
<CustomField>
    <fullName>No_Recipients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Recipients</label>
    <type>Checkbox</type>
</CustomField>