main/default/objects/Renewal__c/fields/Overriden_By__c.field-meta.xml
<CustomField>
    <fullName>Overriden_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overriden By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>