main/default/objects/Renewal__c/fields/Payment_Warning__c.field-meta.xml
<CustomField>
    <fullName>Payment_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Warning</label>
    <type>Checkbox</type>
</CustomField>