main/default/objects/Renewal__c/fields/Payment_Warning_Report__c.field-meta.xml
<CustomField>
    <fullName>Payment_Warning_Report__c</fullName>
    <formula>Payment_Warning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Warning</label>
    <type>Checkbox</type>
</CustomField>