main/default/objects/Renewal__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Policy__r.Id  , Policy__r.Policy_Number__c)</formula>
    <label>Policy</label>
    <type>Text</type>
</CustomField>