main/default/objects/Renewal__c/fields/Policy_Premium__c.field-meta.xml
<CustomField>
    <fullName>Policy_Premium__c</fullName>
    <label>Policy Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>