main/default/objects/Renewal__c/fields/Quote_Layer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Layer__c</fullName>
    <formula>TEXT(Latest_Bound_Quote__r.Layer__c)</formula>
    <label>Quote Layer</label>
    <type>Text</type>
</CustomField>