main/default/objects/Renewal__c/fields/Rateable_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Rateable_Exposure__c</fullName>
    <label>Rateable Exposure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>