main/default/objects/Renewal__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>Expiry_Date__c +1</formula>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>