main/default/objects/Renewal__c/fields/Renewal_Warning__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Warning</label>
    <type>Checkbox</type>
</CustomField>