main/default/objects/Renewal__c/fields/Renewal_Warning_Reason__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Warning_Reason__c</fullName>
    <label>Renewal Warning Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>