main/default/objects/Renewal__c/fields/RICS__c.field-meta.xml
<CustomField>
    <fullName>RICS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RICS 4 Storeys?</label>
    <type>Checkbox</type>
</CustomField>