main/default/objects/Renewal__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals_Submission</relationshipName>
    <type>Lookup</type>
</CustomField>