main/default/objects/Renewal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Insured_Account__c</columns>
    <columns>Policy__c</columns>
    <columns>Latest_Bound_Quote__c</columns>
    <columns>Broker__c</columns>
    <columns>Submission__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>